syntax = "proto3";

option csharp_namespace = "BorrowService.Borrowings";

package borrow.identity;

service CheckUser{
	rpc Check (RequestEmail) returns (UserResponse);
}

message RequestEmail{
	string Email = 1;
}

message UserResponse{
	bool IsExists = 1;
}
